added the admin role from ui only

--- a/Client/Client/package.json
+++ b/Client/Client/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-form": "^0.1.8",
+    "@radix-ui/react-navigation-menu": "^1.2.14",
+    "@shadcn/ui": "^0.0.4",
     "@tailwindcss/vite": "^4.1.12",
     "axios": "^1.11.0",
     "react": "^19.1.1",
